<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IQ PK</string>
    <string name="iq_score">Your intelligence quotient (IQ) is:</string>
    <string name="logout">Exit</string>
    <string name="logout_title">Exit confirmation</string>
    <string name="logout_info">OK to exit the program?</string>
    <string name="link_server">Connecting to server...</string>
    <string name="help_title">Help</string>
    <string name="help_info">Help Contents professional sections: the test is different from the Internet IQ (Intelligence Quotient IQ) test version of Starter Edition or entertainment, is a professional IQ test tools, the use of deviation IQ
    That compared with other peers to determine the level of intelligence, relying on the nearly 30 million people worldwide norm data, intellectual age compared with a norm, to provide an accurate test of your IQ level of assessment.
    Test grading criteria:
    \ n 130 ~ above Very good
    \ n 120 ~ 129 Excellent
    \ n 110 ~ 119 in the (smart)
    \ n 90 ~ 109 in the other
    \ n 80 ~ 89 lower (slow)
    \ n 70 ~ 79 critical state
    \ n 70 the following mental retardation
    \nEach page is divided into three parts, the upper part of the problem area, central to the answer area below the functional area.
   	\nTests were based on problem areas of graphics, choice of the answer area, click on the answer, answer all the questions finished, it will automatically switch to the results page, showing the IQ test results.
   	\nFunctional areas from the menu button from left to right, title browse button, the eject button of three parts. Touching the corresponding area, activate the corresponding function.
   	\nIQ Ranking: Test results page can submit their own test results, and other participants in the Competition IQ contest!!!
   	\nThis feature functions for the Internet.</string>
    <string name="about_title">About</string>
    <string name="about_info">Intelligence is a general mental ability, and everything else, including reasoning, planning, problem solving, abstract thinking, understanding complex ideas, fast learning, and learning from experience, professional IQ tests or from the use of ratio IQ or IQ difference is calculated.
    Raven inspired genius test advanced reasoning, logical ability test design is based, and includes learning, memory, creative thinking, many problems in parallel processing capabilities, such as testing, from the impact of cultural background, to test the general intelligence factor (g factor). Assessment of the core parameters: Average = 100, SD = 15
    Evaluation of core technology and software development professional and technical organization by the TECHTHEME psychological study groups and group together to provide embedded mobile development, the direction of the Organizational Psychology Psychology by several top experts, research interests mainly in the mental control measures, mood and stress management, psychological measurement and personnel selection, corporate services, EAP, who has Olympic psychological
    Made outstanding contributions to technology services, and have won national honors; embedded with mobile development direction by more than 5 years experience in the development of mobile engineers, has met with Gameloft, Fastmobile, Xcome, Pica, Apple and other companies developed the world\'s leading various types of mobile applications.
    \nPlease feel free to contact any need to：
    \n peilinchen@126.com  
    \n mobi.liubing@gmail.com
   	\nWebsite:
   	\n http://www.techtheme.org</string>        
    <string name="iq_pk">IQ and others like it? Great PK IQ！！！</string>  
    
    <string name="menu_1">IQ score</string>
    <string name="menu_2">IQ Ranking</string> 
    <string name="menu_3">Help</string> 
    <string name="menu_4">About</string>
    <string name="menu_5">Other app</string>
    <string name="menu_6">Exit</string>  
    
    <string name="browse_data">Browse topics</string>
    <string name="your_iq">Your intelligence quotient (IQ) is:</string>
    <string name="iq_Differentials">The standard deviation calculated on the basis of 15</string>
    <string name="standard_1">Lowest</string>
    <string name="standard_2">Lower</string>
    <string name="standard_3">Average</string>
    <string name="standard_4">Higher</string>
    <string name="standard_5">Genius</string>
    <string name="update_info">Updated version, please upgrade</string>
</resources>
