<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/menu_layout"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <ImageButton
    	android:id="@+id/menu_btn"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/btn_back"/>    
    <LinearLayout 
    	android:layout_width="320dp" 
		android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:gravity="center"
    	android:background="@drawable/menu_bg">	
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">	
			<LinearLayout android:id="@+id/btnSubmit" 
				android:layout_width="80dip" 
				android:layout_height="100dip"
				android:clickable="true"
				android:gravity="center_horizontal"
				android:orientation="vertical">						  
				<ImageView
					android:background="@drawable/m_submit"
					android:layout_width="80dip" 
					android:layout_height="80dip"
					android:duplicateParentState="true"/>	
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="20dip"
					android:duplicateParentState="true"
					android:textColor="@drawable/text_color"
					android:text="@string/menu_1"/>		
			</LinearLayout>
			<LinearLayout android:id="@+id/btnRank" 
				android:layout_toRightOf="@id/btnSubmit"
				android:layout_width="80dip" 
				android:layout_height="100dip"
				android:clickable="true"
				android:gravity="center_horizontal"
				android:orientation="vertical">				
				<ImageView			
					android:background="@drawable/m_rank"
					android:layout_width="80dip" 
					android:layout_height="80dip"
					android:duplicateParentState="true"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="20dip"
					android:duplicateParentState="true"
					android:textColor="@drawable/text_color"
					android:text="@string/menu_2"/>			
			</LinearLayout>	
			<LinearLayout android:id="@+id/btnHelp" 
				android:layout_toRightOf="@id/btnRank"
				android:layout_width="80dip" 
				android:layout_height="100dip"
				android:clickable="true"
				android:gravity="center_horizontal"
				android:orientation="vertical">				
				<ImageView			
					android:background="@drawable/m_help"
					android:layout_width="80dip" 
					android:layout_height="80dip"
					android:duplicateParentState="true"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="20dip"
					android:duplicateParentState="true"
					android:textColor="@drawable/text_color"
					android:text="@string/menu_3"/>			
			</LinearLayout>							
		</RelativeLayout>
		<View
			android:layout_width="fill_parent"
			android:layout_height="20dp"/>
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center">
			<LinearLayout android:id="@+id/btnAbout" 
				android:layout_width="80dip" 
				android:layout_height="100dip"
				android:clickable="true"
				android:gravity="center_horizontal"
				android:orientation="vertical">						  
				<ImageView
					android:background="@drawable/m_about"
					android:layout_width="80dip" 
					android:layout_height="80dip"
					android:duplicateParentState="true"/>	
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="20dip"
					android:duplicateParentState="true"
					android:textColor="@drawable/text_color"
					android:text="@string/menu_4"/>		
			</LinearLayout>	
			<LinearLayout android:id="@+id/btnReleated" 
				android:layout_toRightOf="@id/btnAbout"
				android:layout_width="80dip" 
				android:layout_height="100dip"
				android:clickable="true"
				android:gravity="center_horizontal"
				android:orientation="vertical">				
				<ImageView			
					android:background="@drawable/m_releated"
					android:layout_width="80dip" 
					android:layout_height="80dip"
					android:duplicateParentState="true"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="20dip"
					android:duplicateParentState="true"
					android:textColor="@drawable/text_color"
					android:text="@string/menu_5"/>			
			</LinearLayout>											
			<LinearLayout android:id="@+id/btnExit" 
				android:layout_toRightOf="@id/btnReleated"
				android:layout_width="80dip" 
				android:layout_height="100dip"
				android:clickable="true"
				android:gravity="center_horizontal"
				android:orientation="vertical">				
				<ImageView			
					android:background="@drawable/m_exit"
					android:layout_width="80dip" 
					android:layout_height="80dip"
					android:duplicateParentState="true"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="20dip"
					android:duplicateParentState="true"
					android:textColor="@drawable/text_color"
					android:text="@string/menu_6"/>			
			</LinearLayout>																
		</RelativeLayout>	
	</LinearLayout>
</LinearLayout>
